# Heuristics_Dynamic_Ambulance_Management

./: .gitignore  Makefile  README  README.md  bases.csv  bases.txt  bases_old.txt  calls.csv  cleaning.txt  compare.py  dados.csv  debug.ilp  debug.txt  debug_nonmiopyc.txt  doc_two_stage.txt  empirical_estimation.py  findBestBase.m  hist.py  hospitals.csv  hospitals.txt  lambda_bases.txt  output_routes.txt  preparedness.txt  quantiles.csv  read_run_times.py  reassign.lp  results.txt  routes_03.eps  routes_12.eps  sample_test.txt  select.lp  test.cfg  test2.py  test_plot.py  two_scenarios_test.txt  val.txt
esma2/: .gitignore  CMakeLists.txt  README.md  build.sh  default.cfg  default_hex.cfg  notes.txt  solver_base.cpp
esma2/cmake/: FindCplex.cmake  FindGUROBI.cmake
esma2/data/: ambulance.lua  bases.txt  cleaning.txt  hospitals.txt  join_prep.py  preparedness_us_16a_16b.txt  preparedness_us_16a_18b.txt  preparedness_us_16a_34b.txt
esma2/data/Rect10x10_km/: rate_analysis.py
esma2/data/rio_osrm/: rio.osrm.cells  rio.osrm.cnbg  rio.osrm.cnbg_to_ebg  rio.osrm.ebg_nodes  rio.osrm.edges  rio.osrm.enw  rio.osrm.icd  rio.osrm.names  rio.osrm.partition  rio.osrm.properties  rio.osrm.ramIndex  rio.osrm.tld  rio.osrm.tls  rio.osrm.turn_duration_penalties  rio.osrm.turn_weight_penalties
esma2/results/: results_one_stage_best_myopic.txt  results_one_stage_prep2.txt  results_one_stage_tipat.txt  summary_random_prep2_rerun_10_14_prep2_a10.txt  summary_random_prep2_rerun_10_14_prep2_a12.txt  summary_random_prep2_rerun_10_14_prep2_a14.txt  summary_random_prep2_rerun_10_14_prep2_rollout_a10.txt  summary_random_prep2_rerun_10_14_prep2_rollout_a12.txt  summary_random_prep2_rerun_10_14_prep2_rollout_a14.txt
esma2/results/response_times/: random_prep2_rerun_10_14_prep2_a10.txt  random_prep2_rerun_10_14_prep2_a12.txt  random_prep2_rerun_10_14_prep2_a14.txt  random_prep2_rerun_10_14_prep2_rollout_a12.txt  random_prep2_rerun_10_14_prep2_rollout_a14.txt
esma2/results/results_cloud/det_hex7/: summary_det_hex7_literature_10_30_centrality_a10.txt  summary_det_hex7_literature_10_30_centrality_a16.txt  summary_det_hex7_literature_10_30_centrality_a28.txt  summary_det_hex7_literature_10_30_centrality_rollout_a12.txt  summary_det_hex7_literature_10_30_centrality_rollout_a14.txt  summary_det_hex7_literature_10_30_centrality_rollout_a16.txt  summary_det_hex7_literature_10_30_centrality_rollout_a24.txt  summary_det_hex7_literature_10_30_centrality_rollout_a28.txt  summary_det_hex7_literature_10_30_coverage_a10.txt  summary_det_hex7_literature_10_30_coverage_a12.txt  summary_det_hex7_literature_10_30_coverage_a18.txt  summary_det_hex7_literature_10_30_coverage_a22.txt  summary_det_hex7_literature_10_30_coverage_a26.txt  summary_det_hex7_literature_10_30_coverage_a28.txt  summary_det_hex7_literature_10_30_coverage_a30.txt  summary_det_hex7_literature_10_30_coverage_rollout_a14.txt  summary_det_hex7_literature_10_30_coverage_rollout_a16.txt  summary_det_hex7_literature_10_30_coverage_rollout_a20.txt  summary_det_hex7_literature_10_30_coverage_rollout_a22.txt  summary_det_hex7_literature_10_30_coverage_rollout_a26.txt  summary_det_hex7_literature_10_30_coverage_rollout_a28.txt  summary_det_hex7_literature_10_30_coverage_rollout_a30.txt  summary_det_hex7_literature_10_30_dist_centrality_a10.txt  summary_det_hex7_literature_10_30_dist_centrality_a18.txt  summary_det_hex7_literature_10_30_dist_centrality_a20.txt  summary_det_hex7_literature_10_30_dist_centrality_a22.txt  summary_det_hex7_literature_10_30_dist_centrality_a24.txt  summary_det_hex7_literature_10_30_district_a12.txt  summary_det_hex7_literature_10_30_district_a16.txt  summary_det_hex7_literature_10_30_district_a18.txt  summary_det_hex7_literature_10_30_district_a28.txt  summary_det_hex7_literature_10_30_district_a30.txt  summary_det_hex7_literature_10_30_district_rollout_a10.txt  summary_det_hex7_literature_10_30_district_rollout_a22.txt  summary_det_hex7_literature_10_30_district_rollout_a26.txt  summary_det_hex7_literature_10_30_district_rollout_a28.txt  summary_det_hex7_literature_10_30_district_rollout_a30.txt  summary_det_hex7_literature_10_30_dummy_queue_a10.txt  summary_det_hex7_literature_10_30_dummy_queue_a12.txt  summary_det_hex7_literature_10_30_dummy_queue_a14.txt  (+47 more)
esma2/results/results_cloud/det_hex_literature/: summary_det_hex7_literature_10_30_centrality_a12.txt  summary_det_hex7_literature_10_30_centrality_a14.txt  summary_det_hex7_literature_10_30_centrality_a18.txt  summary_det_hex7_literature_10_30_centrality_a20.txt  summary_det_hex7_literature_10_30_centrality_a22.txt  summary_det_hex7_literature_10_30_centrality_a24.txt  (+72 more)
esma2/results/tables/: no_rollout_10_30.tex  quick_sweep.tex  quick_sweep.tex.tex
esma2/src/: main.cpp
esma2/test/: test_travel.cpp
(+2448 files in other folders)
